<resources>
	<string name="app_name">AnyThing</string>
	<string name="study">STUDY</string>
	<string name="flower">FLOWER</string>
	<string name="setting">SETTING</string>
	<string name="bottom_nav_behavior">com.lsc.anything.widget.behavior.BottomNavViewBehavior
	</string>
	<string name="hide_show_behavior">com.lsc.anything.widget.behavior.ButtonHideOrShowBehavior</string>
	<string name="network_error">网络错误</string>
	<string name="share">分享</string>
	<string name="open_in_browser">浏览器打开</string>
	<string name="share_title">一个有趣的东西</string>
	<string name="download">下载</string>
	<string name="set_wallpaper">设置壁纸</string>
	<string name="downloading">图片下载</string>
	<string name="download_fail">下载失败…</string>
	<string name="pic_is_existed">图片已存在</string>
	<string name="download_finished">下载完成</string>
	<string name="my_collection">收藏集</string>
	<string name="about_me">关于我</string>
	<string name="clear_cache">清除缓存</string>
	<string name="search">搜索</string>
	<string name="delete_search_history">清除搜索记录</string>
	<string name="http_cache">网络缓存</string>
	<string name="image_cache">图片缓存</string>
	<string name="web_cache">浏览器缓存</string>
	<string name="select_cache">选择需要清除的缓存</string>
	<string name="delete">删除</string>
	<string name="delete_success">删除成功</string>
	<string name="about">关于</string>
	<string name="app_version">版本:v1.0.0</string>
	<string name="app_what">这是什么</string>
	<string name="app_desc">这是一个提供开发技术的app,里面包括Android,Ios,前端,甚至还有妹子^_^ ^_^</string>
	<string name="my_name">吕小白</string>
	<string name="my_adress">广东，广州，广东工业大学</string>
	<string name="follow_me">关注我</string>
	<string name="github_dress">https://www.github.com/lsclst</string>
	<string name="feedback">Bug反馈/建议意见</string>
	<string name="feedback_desc">如果你碰到bug或者有好的建议意见欢迎和我联系 \n 邮箱:873221631@qq.com</string>
	<string name="donation">打赏</string>
	<string name="donation_desc">如果你觉得有意思或者对你有用，请我喝杯茶吧！各位大爷行行好吧^_^ ^_^</string>
	<string name="gank">gank.io</string>
	<string name="gank_desc">感谢gank.io提供的数据，感谢大名鼎鼎的代码家！^_^ ^_^ \n http://gank.io</string>
	<string name="sendto">mailto:873221631@qq.com</string>
	<string name="feedback_tip">tip:AnyThing 的反馈</string>
	<string name="device_model">设备类型</string>
	<string name="sdk_version">sdk版本</string>
	<string name="stagger">瀑布流</string>
	<string name="grid">网格</string>
	<string name="log_feedBack">日志反馈</string>
	<string name="isLogFeedBack">检测到App崩溃,是否反馈日志</string>
	<string name="btn_ok">好的</string>
	<string name="btn_reject">残忍拒绝</string>
	<string name="oh_crash">╥﹏╥哎呀,程序竟然崩溃了 \n 正在努力重启</string>
	<string-array name="gank_type">
		<item>Android</item>
		<item>IOS</item>
		<item>WEB</item>
	</string-array>
	<string-array name="search_category">
		<item>all</item>
		<item>Android</item>
		<item>iOS</item>
		<item>拓展资源</item>
		<item>前端</item>
		<item>瞎推荐</item>
		<item>App</item>
	</string-array>
</resources>
