<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="500dp"
              android:layout_height="200dp"
              android:orientation="vertical">

	<LinearLayout android:layout_width="match_parent"
	              android:layout_height="wrap_content"
	              android:orientation="horizontal"
	              android:paddingLeft="10dp"
	              android:paddingRight="10dp"
	>
		<android.support.v7.widget.AppCompatCheckBox
			android:id="@+id/id_cb_http_cache" android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/http_cache"
		/>
		<TextView android:id="@+id/id_http_cache_size" android:layout_width="wrap_content"
		          android:layout_height="match_parent"
		          android:layout_gravity="right"
		          android:gravity="center"
		          android:text="10mb"
		/>
	</LinearLayout>
	<LinearLayout android:layout_width="match_parent"
	              android:layout_height="wrap_content"
	              android:orientation="horizontal"
	              android:paddingLeft="10dp"
	              android:paddingRight="10dp"
	>
		<android.support.v7.widget.AppCompatCheckBox android:id="@+id/id_cb_image_cache"
		                                             android:layout_width="0dp"
		                                             android:layout_height="wrap_content"
		                                             android:layout_weight="1"
		                                             android:text="@string/image_cache"
		/>
		<TextView android:id="@+id/id_image_cache_size" android:layout_width="wrap_content"
		          android:layout_height="match_parent"
		          android:layout_gravity="right"
		          android:gravity="center"
		          android:text="10mb"
		/>
	</LinearLayout>
	<LinearLayout android:layout_width="match_parent"
	              android:layout_height="wrap_content"
	              android:orientation="horizontal"
	              android:paddingLeft="10dp"
	              android:paddingRight="10dp"
	>
		<android.support.v7.widget.AppCompatCheckBox android:id="@+id/id_cb_web_cache"
		                                             android:layout_width="0dp"
		                                             android:layout_height="wrap_content"
		                                             android:layout_weight="1"
		                                             android:text="@string/web_cache"
		/>
		<TextView android:id="@+id/id_web_cache_size" android:layout_width="wrap_content"
		          android:layout_height="match_parent"
		          android:layout_gravity="right"
		          android:gravity="center"
		          android:text="10mb"
		/>
	</LinearLayout>

	<LinearLayout android:layout_width="match_parent"
	              android:layout_height="wrap_content"
	              android:gravity="right"
	              android:orientation="horizontal"
	              android:paddingBottom="5dp">
		<Button
			android:id="@+id/id_negative_btn"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:background="?android:attr/selectableItemBackground"
			android:text="取消"
			android:textColor="@color/colorAccent"/>
		<Button
			android:id="@+id/id_positive_btn"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:background="?android:attr/selectableItemBackground"
			android:text="确定"
			android:textColor="@color/colorAccent"/>

	</LinearLayout>

</LinearLayout>